Add : responsive website added

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   </head>
   <body>
     <header>
+      <!-- Navigation bar -->
       <nav>
         <img
           id="logo"
@@ -40,6 +41,7 @@
         </div>
       </nav>
       <main>
+        <!-- landing section -->
         <div class="landing-section">
           <div id="main-text-wrapper">
             <h1>Vegan Store Simple Website Template</h1>
@@ -50,6 +52,7 @@
             </p>
           </div>
         </div>
+        <!-- steps section -->
         <section id="steps-section">
           <div id="first-step" class="step-item">
             <i class="fa fa-cut"></i>
@@ -90,6 +93,7 @@
             </p>
           </div>
         </section>
+        <!-- store section -->
         <section id="store-section">
           <p id="fresh-food-heading">Fresh Food</p>
           <h3>Our Vegan Store!</h3>
@@ -137,6 +141,7 @@
             </div>
           </div>
         </section>
+        <!-- testimonials section -->
         <section id="testimonials-section">
           <p id="testimonials-heading">Fresh Food</p>
           <h3>Our Vegan Shop!</h3>
@@ -185,6 +190,7 @@
             </div>
           </div>
         </section>
+        <!-- follow section -->
         <section id="follow-section">
           <div id="left-section">
             <img
@@ -207,6 +213,7 @@
             </div>
           </div>
         </section>
+        <!-- stats wrapper section -->
         <section id="stats-wrapper">
           <div class="stats-item">
             <h3>7</h3>
@@ -225,6 +232,7 @@
             <p>Detox Smoothies</p>
           </div>
         </section>
+        <!-- video section -->
         <section id="video-section">
           <div>
             <h3>Vimeo Video</h3>
@@ -236,6 +244,7 @@
             ></iframe>
           </div>
         </section>
+        <!-- address section -->
         <section id="address-section">
           <div id="address-wrapper">
             <div>
@@ -300,6 +309,7 @@
           </div>
         </section>
       </main>
+      <!-- footer -->
       <footer>© Copyright 2022 Mobirise - All Rights Reserved</footer>
     </header>
   </body>
