--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="/index.css" type="text/css" />
+    <title>Responsive Site</title>
+    <!-- <link rel="stylesheet" href="/index.css" type="text/css" /> -->
+    <link rel="stylesheet" href="https://github.com/Sonakshi888/CSS/blob/website_responsive/index.cssF" type="text/css" />
     <script
       src="https://kit.fontawesome.com/5265e730f3.js"
       crossorigin="anonymous"
