Update : links updated

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Responsive Site</title>
     <!-- <link rel="stylesheet" href="/index.css" type="text/css" /> -->
-    <link rel="stylesheet" href="https://github.com/Sonakshi888/CSS/blob/website_responsive/index.cssF" type="text/css" />
+    <link rel="stylesheet" href="https://github.com/Sonakshi888/CSS/blob/website_responsive/index.css" type="text/css" />
     <script
       src="https://kit.fontawesome.com/5265e730f3.js"
       crossorigin="anonymous"
